syntax = "proto3";

package document;

option go_package = "/doc";

service DocumentService {
  rpc StreamDocument(stream DocumentUpdate) returns (stream DocumentUpdate) {}
  rpc GetFullDocument(Empty) returns (FullDocumentResponse) {}
  rpc StreamLogs(stream Empty) returns (stream LogMessage) {}
}

message DocumentUpdate {
  string client_id = 1;
  int32 position = 2;
  string change = 3;
  string changetype = 4;
}

message Empty {}

message FullDocumentResponse {
  string full_text = 1;
}

message LogMessage{
  string logstring = 1;
}